<resources>

    <string name="test">这是一个测试。。</string>
    <string name="app_name">小满金服</string>
    <string name="dialog_title">温馨提示</string>
    <string name="dialog_confirm">确定</string>
    <string name="back">返回</string>
    <string name="product">产品中心</string>
    <string name="account">我的账户</string>
    <string name="product_v2">理财</string>
    <string name="account_v2">我的</string>
    <string name="home_v2">首页</string>
    <string name="more">更多</string>
    <string name="signin">登录</string>
    <string name="signout">退出登录</string>
    <string name="signup">注册</string>
    <string name="charge">充值</string>
    <string name="cash">提现</string>
    <string name="confirm">确定</string>
    <string name="copyright">版权所有：小满金服信息技术（大连）有限公司</string>
    <string name="bottom_pull_detail">————  上拉查看项目详情     ————</string>
    <string name="item_product_gain">预计年化收益率</string>
    <string name="item_product_deadline">投资时限</string>
    <string name="sign_tel_hint">请填写手机号码</string>
     <string name="sign_captcha_hint">请填写图片验证码</string>
    <string name="sign_tel_hint_new">请输入绑定手机号码</string>
    <string name="sign_tel_verify_hint">请输入短信验证码</string>
    <string name="sign_pwd_hint">请填写登录密码</string>
    <string name="new_pwd_hint">新密码为8个以上字母、数字和符号的组合</string>
    <string name="new_confirm_pwd_hint">再次输入新密码</string>
    <string name="sign_up_pwd_hint">密码为8个以上字母、数字和符号的组合</string>
    <string name="sign_up_confirm_pwd_hint">请再次输入密码</string>
    <string name="sign_up_invite_code_hint">请填写邀请码</string>
    <string name="sign_verify_hint">请输入验证码</string>
    <string name="sign_hint_err">输入的手机号和密码有误！</string>
    <string name="sign_hint">请先填写完整信息！</string>
    <string name="sign_lose">忘记密码</string>
    <string name="sign_protocol"><u>注册协议</u></string>
    <string name="sign_code">获取验证码</string>
    <string name="signup_code">请先输入11位电话号码。</string>
    <string name="signup_hascode">请先获取短信验证码！</string>
    <string name="signup_code_success">验证码发送成功，请注意查收。</string>
    <string name="account_gain">累计收益（元）</string>
    <string name="account_balance">账户余额</string>
    <string name="account_red">我的现金券</string>
    <string name="account_invest">投资记录</string>
    <string name="account_trans">交易记录</string>
    <string name="account_account">账户中心</string>
    <string name="account_username">设置用户名</string>
    <string name="account_email">未绑定邮箱</string>
    <string name="account_idcard">未身份认证</string>
    <string name="account_hand">启用手势密码</string>
    <string name="account_pwd">修改登录密码</string>
    <string name="username_hint">用户名输入</string>
    <string name="username_add">用户名设置成功后将不能够进行修改！</string>
    <string name="idcard_name">请输入真实姓名</string>
    <string name="idcard_id">请填写18位身份证号码</string>
    <string name="idcard_hint">监管部门规定，购买理财产品需提供实名认证信息以确保信息安全。</string>
    <string name="pwd_old">输入旧登录密码</string>
    <string name="pwd_new">输入新登录密码</string>
    <string name="pwd_confirm">再次输入新登录密码</string>
    <string name="email_hint">输入需要绑定邮箱</string>
    <string name="email_add">邮箱绑定后只能在PC网页进行修改!</string>
    <string name="coupon_expire">过期时间：</string>
    <string name="more_aboutus">关于小满金服</string>
    <string name="more_anno">平台公告</string>
    <string name="more_help">帮助中心</string>
    <string name="more_share">邀请好友</string>
    <string name="more_update">检测更新</string>
    <string name="more_comment">拨打客服电话</string>
    <string name="invest_protocol"><u>借款协议</u></string>
    <string name="invest_rate">年化收益率</string>
    <string name="invest_price">投资金额</string>
    <string name="invest_amount">还款本息</string>
    <string name="trans_pre">操作前金额</string>
    <string name="trans_price">操作金额</string>
    <string name="trans_balance">可用余额</string>
    <string name="charge_confirm">确认充值</string>
    <string name="cash_confirm">确认提现</string>
    <string name="tender_protocol">我同意《转让协议》《咨询服务协议》《保证合同》</string>
    <string name="title_activity_find_pwd">FindPwd</string>
    <string name="product_secu">有担保</string>
    <string name="product_cond">100元起投</string>
    <string name="detail_assure">上海芝金资产管理有限公司成立于2010年，注册资本金为5000万，是一家资本实力雄厚、拥有专业人才的新型金融服务机构。公司拥有成熟的风险控制和完善的管理团队，并依托于国内大型集团的实力，对相关项目进行整体分析及风险评估，从中筛选优质客户。</string>
    <string name="product_ensure1">1. 项目推荐方线下尽调、审核、筛选优质资产。</string>
    <string name="product_ensure2">2. 债权转让方按照合同约定承诺回购。</string>
    <string name="product_ensure3">3. 芝金资产管理有限公司承诺对转让方回购进行履约担保，如转让方违约，担保方将对投资人本息进行全额代偿。</string>
    <string name="product_ensure4">4. 小满金服已设立风险保障金，如担保方违约，小满金服将对投资人本息进行全额偿付。</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_find_pwd_two">FindPwdTwoActivity</string>
    <string name="title_activity_normal_invite">NormalInviteActivity</string>
    <string name="title_activity_yan_invite">YanInviteActivity</string>
    <string name="title_activity_invite_list">InviteListActivity</string>
    <string name="title_activity_verify_pwd">VerifyPwd</string>
    <string name="message_all_read">全部设置为已读</string>
    
    <string name="different_pwd">两次输入密码不一致。</string>
    <string name="invite_code_limit">邀请码应为8位</string>
    

    
    <!-- product -->
    <string name="limit_title">项目期限</string>
    
    <!-- KJListView -->
    <string name="refresh_list_normal">下拉立即刷新</string>
    <string name="refresh_list_head_ready">松开立即刷新</string>
    <string name="refresh_list_head_refreshing">数据正在刷新…</string>
    <string name="refresh_list_foot_refreshing">上拉立即加载更多数据</string>
    <string name="refresh_list_foot_ready">松开立即加载更多数据</string>
    
    <!-- hint -->
    <string name="lesat_charge_amount">充值最低100元起</string>
    <string name="report_hint">再次留下您的宝贵意见和建议</string>
    <string name="btn_submit">提交</string>
    
        <!-- dialog -->
    <string name="txtDialogCancelEn">Cancel</string>
    <string name="txtDialogCancelCn">(取消)</string>
    <string name="txtDialogSubmitEn">OK</string>
    <string name="txtDialogSubmitCn">(确认)</string>
    <string name="txtDialogYesEn">Yes</string>
    <string name="txtDialogYesCn">(好)</string>
    <string name="txtDialogNoEn">No</string>
    <string name="txtDialogNoCn">(不)</string>
    <string name="txtDialogRestartEn">Restart</string>
    <string name="txtDialogRestartCn">(重新开始)</string>
	<string name="txtDialogClose">关闭</string>
	
	<string name="txtInvitedDialogCancelCn">返回修改</string>
	<string name="txtInvitedDialogSubmitCn">确认提交</string>
    
        <!-- system -->
    <string name="timeout">网络存在问题，请稍后重试</string>
    <string name="unknown_error_error_code">未知错误，错误代码</string>
    <string name="sd_card_in_not_mounted">请加成您的SD卡是否有插入</string>
    <string name="lessonResConfigErr">课程资源出错，正在为您修复，请稍后.</string>
    <string name="something_error">发生故障</string>
    <string name="please_deleted_cache_dir">权限出错，无法读取存储空间</string>
	<string name="ok">确定</string>
	
	<string name="support_tel_text2">400-178-5558</string>
	<string name="support_tel2">4001785558</string>
	
	
	
</resources>