<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg" >

    <!-- 显示头部标题 -->

    <LinearLayout
        android:id="@+id/headLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <include layout="@layout/header" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/headLinear"
        android:orientation="vertical"
        android:paddingTop="@dimen/page_top" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/component_line_v2"
            android:background="@color/white"
            android:paddingBottom="5dp"
            android:paddingLeft="@dimen/text_padding_left_v2"
            android:paddingTop="5dp" >

            <EditText
                android:id="@+id/tel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/sign_tel_hint"
                android:inputType="number"
                android:maxLength="11"
                android:singleLine="true"
                android:textColor="@color/font_gray_man"
                android:textColorHint="@color/font_hint"
                android:textSize="@dimen/font_hint_v2" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/component_line_v2"
            android:background="@color/white"
            android:paddingBottom="5dp"
            android:paddingLeft="@dimen/text_padding_left_v2"
            android:paddingTop="5dp" >

            <EditText
                android:id="@+id/pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/sign_up_pwd_hint"
                android:inputType="textPassword"
                android:maxLength="20"
                android:singleLine="true"
                android:textColor="@color/font_gray_man"
                android:textColorHint="@color/font_hint"
                android:textSize="@dimen/font_hint_v2" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/component_line_v2"
            android:background="@color/white"
            android:paddingBottom="5dp"
            android:paddingLeft="@dimen/text_padding_left_v2"
            android:paddingTop="5dp" >

            <EditText
                android:id="@+id/pwdconfirm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/sign_up_confirm_pwd_hint"
                android:inputType="textPassword"
                android:maxLength="20"
                android:singleLine="true"
                android:textColor="@color/font_gray_man"
                android:textColorHint="@color/font_hint"
                android:textSize="@dimen/font_hint_v2" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/component_line_v2"
            android:background="@color/white"
            android:paddingBottom="5dp"
            android:paddingLeft="@dimen/text_padding_left_v2"
            android:paddingTop="5dp"
            android:visibility="visible" >

            <EditText
                android:id="@+id/txtCaptcha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/sign_captcha_hint"
                android:inputType="text"
                android:maxLength="4"
                android:singleLine="true"
                android:textColor="@color/font_gray_man"
                android:textColorHint="@color/font_hint"
                android:textSize="@dimen/font_hint_v2" />

            <ImageView
                android:id="@+id/imgCaptcha"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="@dimen/component_line_v2"
                android:layout_marginRight="20dp"
                android:layout_marginTop="@dimen/component_line_v2"
                android:gravity="center"
                android:scaleType="fitCenter" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/component_line_v2"
            android:background="@color/white"
            android:paddingBottom="5dp"
            android:paddingLeft="@dimen/text_padding_left_v2"
            android:paddingTop="5dp" >

            <EditText
                android:id="@+id/tel_verify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/sign_tel_verify_hint"
                android:inputType="number"
                android:maxLength="11"
                android:singleLine="true"
                android:textColor="@color/font_gray_man"
                android:textColorHint="@color/font_hint"
                android:textSize="@dimen/font_hint_v2" />

            <com.nangua.xiaomanjflc.widget.FontTextView
                android:id="@+id/code"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="@dimen/component_line_v2"
                android:layout_marginRight="20dp"
                android:layout_marginTop="@dimen/component_line_v2"
                android:background="@drawable/btn_blue"
                android:gravity="center"
                android:text="@string/sign_code"
                android:textColor="@color/white"
                android:textSize="@dimen/font_hint_v2" />
        </RelativeLayout>
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/component_line_v2"
            android:background="@color/white"
            android:paddingBottom="5dp"
            android:paddingLeft="@dimen/text_padding_left_v2"
            android:paddingTop="5dp" >

            <EditText
                android:id="@+id/inviteCode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/sign_up_invite_code_hint"
                android:inputType="text"
                android:maxLength="8"
                android:digits="0123456789qwertyuioplkjhgfdsazxcvbnm"
                android:singleLine="true"
                android:textColor="@color/font_gray_man"
                android:textColorHint="@color/font_hint"
                android:textSize="@dimen/font_hint_v2" />
        </RelativeLayout>

        <com.nangua.xiaomanjflc.widget.FontTextView
            android:id="@+id/hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/page_line"
            android:drawableLeft="@drawable/sign_padding"
            android:drawablePadding="@dimen/page_drawable"
            android:gravity="center_vertical"
            android:text="@string/sign_hint"
            android:textColor="@color/orange"
            android:textSize="@dimen/font_hint"
            android:visibility="gone" />

        <com.nangua.xiaomanjflc.widget.FontTextView
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="@dimen/page_line_btn"
            android:background="@drawable/btn_blue"
            android:gravity="center"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:textSize="@dimen/font_app" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/checkbox"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp"
                android:src="@drawable/checkbox_none"
                android:visibility="gone" />

            <com.nangua.xiaomanjflc.widget.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="创建账户代表同意并接受小满金服的"
                android:textColor="@color/font_gray"
                android:textSize="@dimen/font_hint_small_v2" />

            <com.nangua.xiaomanjflc.widget.FontTextView
                android:id="@+id/protocol"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/sign_protocol"
                android:textColor="@color/blue_v2"
                android:textSize="@dimen/font_hint_small_v2" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>